<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kemix.adventurerlog.CreateCharacter">

    <Spinner
        android:prompt="@string/games_prompt"
        android:id="@+id/games_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog">
    </Spinner>

    <EditText
        android:id ="@+id/trainer_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:layout_below="@+id/games_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Spinner
        android:prompt="@string/age_prompt"
        android:id = "@+id/age_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainer_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog">
    </Spinner>

    <Spinner
        android:prompt="@string/sex_prompt"
        android:id = "@+id/gender_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age_spinner"
        android:layout_alignParentLeft="true"
        android:spinnerMode="dialog">
    </Spinner>

    <EditText
        android:id = "@+id/trainer_height"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/height_hint"
        android:inputType="text"
        android:layout_below="@+id/gender_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id = "@+id/trainer_weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight_hint"
        android:inputType="number"
        android:layout_below="@+id/trainer_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:prompt="@string/level_prompt"
        android:id = "@+id/level_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainer_weight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog">
    </Spinner>

    <Button
        android:text = "@string/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendInfo"
        android:layout_below="@+id/level_spinner"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
